Fix homepage overflowing content

--- a/src/subtitulamos/resources/assets/css/app.css
+++ b/src/subtitulamos/resources/assets/css/app.css
@@ -224,8 +224,9 @@ header {
 }
 
 .content {
-  width: 100%;
-  padding: 40px 25px var(--footer-padding-y) 25px;
+  --content-pading-x: 25px;
+  width: calc(100% - var(--content-pading-x) * 2);
+  padding: 40px var(--content-pading-x) var(--footer-padding-y) var(--content-pading-x);
   margin: 0 auto;
 }
 
