--- a/src/subtitulamos/resources/assets/css/index.scss
+++ b/src/subtitulamos/resources/assets/css/index.scss
@@ -1,7 +1,7 @@
 @import "app.css";
 
 .content {
-  max-width: var(--max-width);
+  max-width: calc(var(--max-width) - var(--content-pading-x) * 2);
   --navigation-chevron-width: 45px;
 
   #large-splash {
